k8s/test/istio-gateway_with_namespace.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: app-gateway
  namespace: test
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - '*'
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: service1-route
  namespace: test
spec:
  hosts:
  - '*'
  gateways:
  - app-gateway
  http:
  - match:
    - uri:
        prefix: /combined
    route:
    - destination:
        host: service1
        port:
          number: 80
