k8s/test/prometheus_with_namespace.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: prometheus-config
  namespace: test
  labels:
    name: prometheus-config
data:
  prometheus.yml:
    "global:\n  scrape_interval: 5s\nscrape_configs:\n  - job_name:\
    \ 'service1'\n    metrics_path: /metrics\n    static_configs:\n      - targets:\
    \ ['service1:80']\n"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: test
  annotations:
    redeploy-timestamp: "2025-06-24T05:57:53Z"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus:v2.52.0
          args:
            - --config.file=/etc/prometheus/prometheus.yml
          ports:
            - containerPort: 9090
          volumeMounts:
            - name: config-volume
              mountPath: /etc/prometheus/
      volumes:
        - name: config-volume
          configMap:
            name: prometheus-config
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-test
  namespace: test
spec:
  type: NodePort
  selector:
    app: prometheus
  ports:
    - port: 9090
      nodePort: 32003
