k8s/test/service2_with_namespace.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service2
  namespace: test
spec:
  replicas: 4
  selector:
    matchLabels:
      app: service2
  template:
    metadata:
      labels:
        app: service2
    spec:
      containers:
        - name: service2
          image: service2
          imagePullPolicy: Never
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: service2
  namespace: test
spec:
  selector:
    app: service2
  ports:
    - port: 80
      targetPort: 8082
