k8s/test/service3_with_namespace.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service3
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service3
  template:
    metadata:
      labels:
        app: service3
    spec:
      containers:
      - name: service3
        image: service3
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: service3
  namespace: test
spec:
  selector:
    app: service3
  ports:
  - port: 80
    targetPort: 5000
